Creacion de Graficos 17-10-2017

--- a/src/ProductoBundle/Resources/config/routing.yml
+++ b/src/ProductoBundle/Resources/config/routing.yml
@@ -25,3 +25,7 @@ editar:
 actualizar:
     path:     /actualizar
     defaults: { _controller: ProductoBundle:Default:actualizar } 
+
+cumplimiento:
+    path:     /cumplimiento
+    defaults: { _controller: ProductoBundle:Default:cumplimiento } 
